# streamlit-app-flight-traficker

./: main.py  pyproject.toml
src/: flight_map.py
