[project]
name = "streamlit-app-flight-traficker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "folium>=0.20.0",
    "pandas>=2.3.2",
    "requests>=2.32.5",
    "streamlit>=1.49.0",
    "streamlit-folium>=0.25.1",
]
